[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/sprites.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://audio/dogwalk.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/hitHurt.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
